--- a/config/config.json
+++ b/config/config.json
@@ -16,13 +16,42 @@
           }
         ]
       },
-      "streamSettings": {
-        "network": "ws",
-        "wsSettings": {
-          "path": "/V2_PATH"
-        }
-      }
-    }
+			"streamSettings": {
+				"network": "tcp",
+				"tcpSettings": {
+					"header": {
+						"type": "http",
+						"response": {
+							"version": "1.1",
+							"status": "200",
+							"reason": "OK",
+							"headers": {
+								"Content-encoding": [
+									"gzip"
+								],
+								"Content-Type": [
+									"text/html; charset=utf-8"
+								],
+								"Cache-Control": [
+									"no-cache"
+								],
+								"Vary": [
+									"Accept-Encoding"
+								],
+								"X-Frame-Options": [
+									"deny"
+								],
+								"X-XSS-Protection": [
+									"1; mode=block"
+								],
+								"X-content-type-options": [
+									"nosniff"
+								]
+							}
+						}
+					}
+				}
+			}
   ],
   "outbounds": [
     {
